plugins {
    id 'java'
    id 'application'
}

group 'com.mku.salmon'
version '3.0.1'

repositories {
    maven {
        // uncomment for local repo
        allowInsecureProtocol true
        url 'http://localhost/repository/maven/releases'

        // official salmon repo
//         url 'https://github.com/mku11/Repo/raw/main/maven/releases'
    }
    mavenCentral()
}

ext {
    junitVersion = '5.9.1'
    salmonLibVersion = '3.0.1'
}

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.mku.salmon.vault.main'
    mainClass = 'com.mku.salmon.vault.main.Main'
}

// path to download the native libraries
project.ext.set('nativeLibsDir', "$buildDir/libs/natives")

sourceSets {
    main {
        java {
            main.java.srcDirs += '../src'
            main.java.srcDirs += '../../java-common/src'
            main.java.srcDirs += '../../java-win-common/src'
        }
    }
    main.resources.srcDirs += '../res'
    main.resources.srcDirs += '../../common/common-res'
}

// unzipping the native library
configurations {
    nativeImplementation
}
task unzipNative(type: Sync) {
    from {
        configurations.nativeImplementation.collect { zipTree(it) }
    }
    into file(project.nativeLibsDir)
}
build.dependsOn unzipNative

dependencies {

    // salmon libs:
    implementation("com.mku.salmon:salmon-core:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-fs:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-win:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-native:${salmonLibVersion}:win-x86_64")
    nativeImplementation("com.mku.salmon:salmon-native:${salmonLibVersion}:win-x86_64")

    implementation 'net.java.dev.jna:jna:5.13.0'


    implementation 'com.github.pcorless.icepdf:icepdf-core:7.2.4_P01'
    implementation 'com.github.pcorless.icepdf:icepdf-viewer:7.2.4_P01'

    implementation 'org.openjfx:javafx-base:17.0.2'
    implementation 'org.openjfx:javafx-base:17.0.2:win'
    implementation 'org.openjfx:javafx-base:17.0.2:mac'
    implementation 'org.openjfx:javafx-base:17.0.2:linux'
    implementation 'org.openjfx:javafx-graphics:17.0.2'
    implementation 'org.openjfx:javafx-graphics:17.0.2:win'
    implementation 'org.openjfx:javafx-graphics:17.0.2:mac'
    implementation 'org.openjfx:javafx-graphics:17.0.2:linux'
    implementation 'org.openjfx:javafx-media:17.0.2'
    implementation 'org.openjfx:javafx-media:17.0.2:win'
    implementation 'org.openjfx:javafx-media:17.0.2:mac'
    implementation 'org.openjfx:javafx-media:17.0.2:linux'
    implementation 'org.openjfx:javafx-fxml:17.0.2'
    implementation 'org.openjfx:javafx-fxml:17.0.2:win'
    implementation 'org.openjfx:javafx-fxml:17.0.2:mac'
    implementation 'org.openjfx:javafx-fxml:17.0.2:linux'
    implementation 'org.openjfx:javafx-swing:17.0.2'
    implementation 'org.openjfx:javafx-swing:17.0.2:win'
    implementation 'org.openjfx:javafx-swing:17.0.2:mac'
    implementation 'org.openjfx:javafx-swing:17.0.2:linux'
    implementation 'org.openjfx:javafx-controls:17.0.2'
    implementation 'org.openjfx:javafx-controls:17.0.2:win'
    implementation 'org.openjfx:javafx-controls:17.0.2:mac'
    implementation 'org.openjfx:javafx-controls:17.0.2:linux'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

ext {
    javaMainClass = "com.mku.salmon.vault.main.Main"
    // change this to the javafx lib path
    javaFxLib = "D:\\tools\\javafx-sdk-17.0.10\\lib"
}

// To run the app execute runApp instead of run task
task runApp(type: JavaExec) {
    group = "application"
    description = "Run the application"
    classpath = sourceSets.main.runtimeClasspath
    main = javaMainClass
    systemProperty "java.library.path", "build/libs/natives/lib"
    jvmArgs = ["--module-path", javaFxLib, "--add-modules=javafx.controls,javafx.swing,javafx.fxml,javafx.media,javafx.graphics"]
}

// run the unzipNative task first
runApp.dependsOn build